--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </ul>
  <hr>
   <h2>Recipe Details</h2>
-  <img src="https:/thaisoup.jpg"alt="Tom Yum Goong">
+  <img src="://thaisoup.jpg"alt="Tom Yum Goong">
      <br><br>
  <hr>
      <table>
